2000-03-24  Michael Natterer  <mitch@gimp.org>

	* Makefile.am
	* gimp1_0_splash.ppm: added
	* gimp1_1_splash.ppm: removed

	* gimp_splash.ppm: the image formerly known as gimp1_1_splash.ppm

	* app/app_procs.c: load gimp_splash.ppm

	The idea if shearing the data_dir between Gimp versions has
	vanished, so this seems like the right thing to do (TM).

	Keep the 1.0 splash around for sentimental reasons but don't
	install it anymore.

	* plug-ins/common/autocrop.c: indentation paranoia.
	
2000-03-24  Michael Natterer  <mitch@gimp.org>

	* app/plug_in.c (plug_in_proc_def_remove): pass FALSE to
	plug_in_proc_def_destroy() so the proc_def structure gets actually
	freed.

2000-03-24  Asbjorn Pettersen  <asbjornP@dualog.no>

	* plug-ins/bmp/Makefile.am :  add bmpos2.c and bmpos2.h

	* plug-ins/bmp/bmpread.c (ReadBMP): Add support for
	reading old OS/2 bitmaps.

	* plug-ins/bmp/bmpos2.h (read_os2_head1): 
	* plug-ins/bmp/bmpos2.c : New file for OS/2 bitmap reading. 

Fri Mar 24 17:13:41 CET 2000  Sven Neumann <sven@gimp.org>

	plug-ins/common/mapcolor.c: applied gimp-kirchgessner-000320-0.
	Fixes problem with divide by zero when selecting same colors,
	adds preview and makes the GUI more intuitive.

	Additionally, I've added another check for the drawable being RGB
	in the function that does the actual work. Remember that the
	image_type may change while the dialog is open!

Fri Mar 24 15:48:40 CET 2000  Sven Neumann <sven@gimp.org>

	applied gimp-quinet-000310-0 by Raphael Quinet <quinet@gamers.org>

	* plug-ins/script-fu/scripts/coolmetal-logo.scm: replaced the
	seascape toggle with a direct selection of the gradient.

	* plug-ins/script-fu/scripts/carved-logo.scm: added new parameter
	to allow some padding around the text (useful for tiling backgr.)

	* plug-ins/script-fu/scripts/news-text.scm, speed-text.scm: added
	new parameter to specify the text color and the background color,
	instead of using the active colors.
